[package]
name = "dpl-artists"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "dpl_artists"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = { version = "0.28.0", features = ["init-if-needed"] }
anchor-spl = { version = "0.28.0" }
mpl-token-metadata = { version = "1.13.1", features = ["no-entrypoint"]}
solana-program = "~1.14.13"
toml_datetime = "=0.6.1"
winnow = "=0.4.1"